Adicionando a logo na pasta imgs é fazendo os itens do header/nav.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <title>Projeto-car</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="container">
+            <div class="logo"><i class="title-car"></i> Automotive</div>
+            <ul>
+                <li><a href="#" class="">Home</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">Price</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#" class="appointment">Book Appointment</a></li>
+            </ul>
+        </nav>
+        <div class="content">
+                <h1>Your Car Repairs</h1>
+                <p>Visit us for your service</p>
+                <a class="appointment" href="#">Book Appointment</a>   
+        </div>    
+    </header>
+
+
+
 </body>
 </html>
