Terminado o footer no HTML.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,7 @@
         <nav class="container">
             <div class="logo"><i class="title-car"></i> Automotive</div>
             <ul>
-                <li><a href="#" class="">Home</a></li>
+                <li><a href="#" class="home">Home</a></li>
                 <li><a href="#">Features</a></li>
                 <li><a href="#">Price</a></li>
                 <li><a href="#">Contact</a></li>
@@ -26,7 +26,23 @@
         </div>    
     </header>
 
-
-
+    <footer>
+        <div class="footer-car">
+            <ul>
+                <li>
+                    <strong>Our location</strong>
+                    <p>15 Street Suburb Country 6000</p>
+                </li>    
+                <li>
+                    <strong>Phone</strong>
+                    <p>+61 040 400 4000</p>
+                </li>    
+                <li>
+                    <strong>Email</strong>
+                    <p>automotive@carsales.com.au</p>
+                </li>    
+            </ul>    
+        </div>
+    </footer>
 </body>
 </html>
