--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Projeto-car</title>
 </head>
 <body>
-    <header>
+    <header class="header-car">
         <nav class="container">
             <div class="logo"><i class="title-car"></i> Automotive</div>
             <ul>
